Fix iframe wrapping in embed

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     box-shadow: inset 0 2px 12px #0000008c;
 }
 
-.codeTextarea:not(:disabled) {
+.codeTextarea:not(:disabled), .embedTextarea {
     white-space: nowrap;
 }
 
